<resources>
    <string name="app_name">FireTDS</string>
    <string name="button_GetStarted">Get Started</string>
    <string name="button_TestWater">Test Water</string>
    <string name="button_DataHistory">Data History</string>
    <string name="button_Graph">Predictions</string>
    <string name="button_TreatmentDetails">Treatment Details</string>
    <string name="button_SaveData">Save Data</string>
    <string name="text_ideal">Ideal TDS</string>
    <string name="text_accept">Acceptable TDS</string>
    <string name="text_unaccept">Unacceptable TDS</string>
    <string name="text_saveprompt">Data Saved!</string>
    <string name="text_TDSvalue">Water TDS Meter</string>
    <string name="text_options">Pool Treatment Options</string>
    <string name="text_record">Record is removed</string>
    <string name="text_prediction">Prediction</string>
    <string name="clean_now">The pool needs cleaning</string>
    <string name="text_predict">Estimated time until pool cleaning: </string>
    <string name="text_days">hours</string>
    <string name="text_current">Current TDS</string>

    <string name="treatment_options_low_tds">
        <![CDATA[
        <ol>
            <li>Evacuate Pool and change water.</li>
        </ol>
        ]]>
    </string>
    <string name="treatment_options_medium_tds">
        <![CDATA[
        <ol>
            <li>Add chlorine to the pool.</li><br>
            <li>Use an algaecide to control algae growth.</li><br>
            <li>Balance pH levels with appropriate chemicals.</li><br>
            <li>Use a pool clarifier to improve water clarity.</li><br>
            <li>Regularly clean the pool filters.</li><br>
        </ol>
        ]]>
    </string>
    <string name="english_radio_button">English</string>
    <string name="french_radio_button">French</string>
    <string name="save_button">Save</string>


    <string name="header_title">AquaSmart</string>
    <string name="profile_icon_desc">Profile Icon</string>
    <string name="option_my_profile">My Profile</string>
    <string name="option_data_history">Data History</string>
    <string name="option_predictions">Predictions</string>
    <string name="option_language">Language</string>

    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="support">Contact Support</string>

    <string name="toast1">Account created successfully!</string>
    <string name="toast2">Please enter both username and password.</string>
    <string name="toast3">Sign in successful!</string>
    <string name="toast4">Invalid username or password.</string>
    <string name="toast5">Failed to read database.</string>
    <string name="toast6">Not enough data to calculate trend.</string>
    <string name="text1">Select Language</string>
    <string name="text2">Treatment is not needed</string>
    <string name="text3">Please contact support at support@aquasmart.com</string>

</resources>