<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Include the custom header layout at the top -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/select_lang"
        android:layout_width="405dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="613dp"
        android:gravity="center"

        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="26dp" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="-1dp"
        android:orientation="vertical">

        <!-- English RadioButton -->
        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/english_radio_button"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- French RadioButton -->
        <RadioButton
            android:id="@+id/radioFrench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/french_radio_button"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageRadioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_button" />

    <!-- Other views go here -->

</RelativeLayout>