<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water2"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/logot" />


    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/enterUserName"
        app:layout_constraintStart_toStartOf="@+id/enterUserName"
        app:layout_constraintTop_toBottomOf="@+id/enterUserName" />

    <EditText
        android:id="@+id/enterUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="123dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/glass3"


        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/enterPassword"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="122dp"
        android:layout_height="51dp"
        android:background="@drawable/glass3"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>
